--- a/wsgi/openshift/geography/static/sass/_responsive.sass
+++ b/wsgi/openshift/geography/static/sass/_responsive.sass
@@ -2,12 +2,10 @@
   .version
     display: none
   .map-container
+    padding-top: 30px
     height: auto
     h1
-      text-align: left
-      bottom: -3px
-      left: 90px
-      top: auto
+      margin-top: 5px
   .welcome-page
     p
       padding: 10px
@@ -26,8 +24,6 @@
       font-size: 1em
   .jumbotron 
     padding: 0 0 20px 0
-  h2
-    font-size: 16px
   .well
     padding: 0px
   .map-container
