--- a/wsgi/openshift/geography/static/sass/_welcome-page.sass
+++ b/wsgi/openshift/geography/static/sass/_welcome-page.sass
@@ -1,4 +1,6 @@
 .welcome-page.jumbotron
+  padding-left: 20px
+  padding-right: 20px
   h1
     font-size: 3em
     text-align: center
@@ -15,7 +17,7 @@
       text-align: justify
   .btn-centerer
     text-align: center
-    margin: 20px auto 20px auto
+    margin: 30px auto 30px auto
 
 .how-it-works
   align: center
@@ -25,9 +27,14 @@
   margin-top: -30px
   padding: 20px
   .works-div
-    font-size: 1.1em
+    font-size: 1.2em
     text-align: justify
-    margin-bottom: 30px
+    margin-bottom: 60px
+    i.glyphicon
+      font-size: 2em
+      float: left
+      margin-right: 15px
+      margin-left: -10px
 
 @media (min-width: 767px)
   $huge-radius: 9px
