--- a/wsgi/openshift/geography/static/sass/map.sass
+++ b/wsgi/openshift/geography/static/sass/map.sass
@@ -1,12 +1,23 @@
 svg
   .bg
     stroke-width: 1.5
-  .state, .city, .river, .lake, .mountains
+  .state,
+  .province,
+  .region,
+  .region_cz,
+  .region_it,
+  .autonomous_comunity,
+  .bundesland,
+  .mountains,
+  .lake
     cursor: pointer
-  .state, .city, .lake, .mountains
     fill-opacity: 1
-  .state, .lake, .mountains
     &:hover
       fill-opacity: 0.8
+  .city, 
+  .river
+    cursor: pointer
+  .city
+    fill-opacity: 1
   .lake
     stroke: #53a5df
