--- a/wsgi/openshift/templates/home/welcome_page.html
+++ b/wsgi/openshift/templates/home/welcome_page.html
@@ -16,7 +16,7 @@
       <h1 >Slepé Mapy</h1>
       <div class="flatblock block-welcome_page col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
         <div class="flatblock-content">je aplikace na procvičování znalosti slepých map.
-          Aplikace přizpůsobuje obtížnost otázek znalostem studenta.
+          Aplikace přizpůsobuje obtížnost otázek vašim znalostem.
         </div>
         <div class="btn-centerer">
           <a href="#/practice/" class="btn btn-primary btn-lg btn-huge" >Začít procvičovat svět</a>
