--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -49,7 +49,7 @@
     </button>
 
       <a class="navbar-brand" href="#">Slepé Mapy</a>
-      <div class="collapse navbar-collapse navbar-responsive-collapse">
+      <div id="nav-main" class="collapse navbar-collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav  pull-left">
                 <li ng-class="'/view/world/'|isActive">
                   <a href="#/view/world/">Svět</a>
@@ -101,7 +101,7 @@
                   <a id="drop1" href="" role="button" class="dropdown-toggle" data-toggle="dropdown">
                     <i class="glyphicon glyphicon-user"></i> <span ng-bind="user.username"></span> <b class="caret"></b></a>
                   <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
-                    <li class="forgot-pwd"><a href="" ng-click="logout()">Odhlásit se</a></li>
+                    <li class="forgot-pwd"><a href="" ng-click="logout()"><i class="glyphicon glyphicon-log-out"></i> Odhlásit se</a></li>
                   </ul>
                 </li>
               <li class="atooltip points" title="Body - přibývají za každou správnou odpověď" ng-show="user.points">
