--- a/wsgi/openshift/templates/home/how_it_works.html
+++ b/wsgi/openshift/templates/home/how_it_works.html
@@ -3,7 +3,7 @@
 <div class="col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
 
 <div class="works-div">
-<h3><i class="glyphicon glyphicon-flag"></i> Zeměpis hrou</h3>
+<h3><i class="glyphicon glyphicon-tower"></i> Zeměpis hrou</h3>
 Procvičte si své znalosti zeměpisu hravou formou. V aktuální verzi zatím soutěžíte jen sami se sebou, respektive proti systému.
 Dokážete obarvit celou mapu na zeleno?
 </div>
