--- a/wsgi/openshift/geography/static/sass/_map-container.sass
+++ b/wsgi/openshift/geography/static/sass/_map-container.sass
@@ -57,10 +57,15 @@ $map-height:500px
 
 .color-indicator
   display: inline-block
-  width: 14px
-  height: 14px
-  margin-top: 5px
-  margin-bottom: -5x
-  margin-left: 3px
+  width: 18px
+  height: 18px
+  margin: -2px 5px -5px -6px
   border: 0
-  border-radius: 7px
+  border-radius: 10px
+
+.qtip-titlebar
+  .label
+    font-size: 20px
+    margin-bottom: 15px
+   
+  font-size: 13px
