--- a/wsgi/openshift/geography/static/sass/_map-container.sass
+++ b/wsgi/openshift/geography/static/sass/_map-container.sass
@@ -67,5 +67,7 @@ $map-height:500px
   .label
     font-size: 20px
     margin-bottom: 15px
+    white-space: normal
+    text-align: left
    
   font-size: 13px
