--- a/wsgi/openshift/geography/static/sass/_preview-map.sass
+++ b/wsgi/openshift/geography/static/sass/_preview-map.sass
@@ -10,30 +10,34 @@
     margin-bottom: 0px
     padding-bottom: 0px
   h2
+    margin: 0px
     background: rgba(0,0,0,0.15)
     &:hover
       background: rgba(0,0,0,0.2)
+    .btn
+      font-size: 16px
   h3
+    margin: 0px -15px 0px -15px
     background: rgba(0,0,0,0.05)
     &:hover
       background: rgba(0,0,0,0.1)
+    .btn
+      margin-top: -3px
       
   h3, h2
-    margin: 0px -15px 0px -15px
     padding: 10px
     cursor: pointer
     padding-left: 20px
     i
       visibility: hidden
-      margin-rigth: 20px
     &:hover
       i
         visibility: visible
     .btn
-      margin-top: -5px
       font-weight: bold
       i
         visibility: visible
+
 
 $anim-time: 0.5s
 
