--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -75,8 +75,9 @@
                 </li>
         </ul>
           ...
-            <ul class="nav ng-cloak navbar-nav pull-right">
-                <li class="dropdown" ng-show="user.username == ''" >
+            <ul class="nav ng-cloak navbar-nav pull-right"
+                ng-init="initUser('{{user.username}}',{{user.points}})">
+                <li class="dropdown" ng-show="user.username === ''" >
                   <a href="" 
                      role="button" 
                      class="dropdown-toggle atooltip drop-login"
@@ -97,11 +98,11 @@
                     </li>
                   </ul>
                 </li>
-                <li class="dropdown" ng-show="user.username != ''">
+                <li class="dropdown" ng-show="user.username !== ''">
                   <a id="drop1" href="" role="button" class="dropdown-toggle" data-toggle="dropdown">
                     <i class="glyphicon glyphicon-user"></i> <span ng-bind="user.username"></span> <b class="caret"></b></a>
                   <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
-                    <li class="forgot-pwd"><a href="" ng-click="logout()"><i class="glyphicon glyphicon-log-out"></i> Odhlásit se</a></li>
+                    <li class="forgot-pwd"><a href="#/" ng-click="logout()"><i class="glyphicon glyphicon-log-out"></i> Odhlásit se</a></li>
                   </ul>
                 </li>
               <li class="atooltip points" title="Body - přibývají za každou správnou odpověď" ng-show="user.points">
