Eliminate render-blocking CSS in above-the-fold content

--- a/wsgi/openshift/geography/static/sass/_global.sass
+++ b/wsgi/openshift/geography/static/sass/_global.sass
@@ -7,9 +7,6 @@ body
   li
     list-style-type: none
 
-h1, h2, h3
-  font-weight: bold
-
 ul
   padding: 0px
   margin: 0px
@@ -34,10 +31,6 @@ ul.dropdown-menu.login
     opacity: 0.5
   a:hover i.icon-user, a:focus i.icon-user, &.open i.icon-user
     opacity: 1
-
-.navbar 
-  margin-bottom: 0px
-  border-radius: 0px
 
 .version
   border: 0px none currentColor
@@ -64,15 +57,13 @@ ul.dropdown-menu.login
   margin-right: auto
   float: none
   position: relative
+  margin-bottom: 30px
 
 .label
   margin-right: 10px
   margin-top: 5px
   padding-bottom: 5px
   cursor: default
-
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak
-  display: none
 
 html, body
   height: 100%
@@ -82,18 +73,17 @@ html, body
   padding-bottom: 30px
 
 #footer
-  background: -webkit-linear-gradient(top, $gray-top, $gray-bottom)
-  background: -moz-linear-gradient(top, $gray-top, $gray-bottom)
-  background: -o-linear-gradient(top, $gray-top, $gray-bottom)
-  background: -ms-linear-gradient(top, $gray-top, $gray-bottom)
-  color: #666
+  background-color: #34495e
+  color: #eee
   text-align: center
   clear: both
   position: relative
   z-index: 10
-  margin-top: -30px
-  padding-top: 5px
+  margin-top: -60px
+  padding: 20px
   min-height: 30px
+  a
+    color: rgb(82, 186, 255) 
   .contact
     margin: 0 5px 0 5px
 
