--- a/wsgi/openshift/templates/home/welcome_page.html
+++ b/wsgi/openshift/templates/home/welcome_page.html
@@ -12,7 +12,7 @@
     </a>
   </div>
   <![endif]-->
-  <div class="map-container welcome-page jumbotron">
+  <div class="welcome-page jumbotron">
       <h1 >Slepé Mapy</h1>
       <div class="flatblock block-welcome_page col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
         <div class="flatblock-content">je aplikace na procvičování znalosti slepých map.
