--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -2,7 +2,7 @@
 <html data-ng-app="blindMaps" data-ng-controller="AppCtrl" lang="cs">
   <head>
     <meta charset="utf-8">
-    <title>{{ title }}Slepé Mapy - adaptivní aplikace na procvičování polohy států</title>
+    <title>{{ title }}Slepé Mapy - inteligentní aplikace na procvičování zeměpisu</title>
     {% if isProduction  %}
         <script type='text/javascript'>
         window.Muscula = { settings:{
