--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -21,7 +21,7 @@
 	{% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Adaptivní aplikace na procvičování slepých map<">
-    <meta name="keywords" content="slepé mapy, státy, procvičování, svět, amerika, afrika, asie, usa" />
+    <meta name="keywords" content="slepé mapy, zeměpis, státy, procvičování, svět, amerika, afrika, asie, usa" />
 
     <link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
 
