Elaborate html meta description for SEO. #42

--- a/main/templates/home/home.html
+++ b/main/templates/home/home.html
@@ -20,7 +20,9 @@
         </script>
 	{% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Adaptivní aplikace na procvičování slepých map<">
+    <meta name="description" content="Inteligentní aplikace na procvičování
+    států a měst na slepé mapě světa, Evropy, Asie, Afriky, Ameriky, ČR, usa
+    a dalších států">
     <meta name="keywords" content="slepé mapy, zeměpis, státy, procvičování, svět, amerika, afrika, asie, usa" />
 
     <link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
