Create "About" page. #59

--- a/main/geography/static/sass/_welcome-page.sass
+++ b/main/geography/static/sass/_welcome-page.sass
@@ -29,6 +29,9 @@
   background: #eee
   margin-top: -30px
   padding: 20px
+  li
+    list-style-type: circle
+    margin: 5px 0 5px 0px
   .works-div
     font-size: 1.2em
     text-align: justify
