--- a/main/templates/home/home.html
+++ b/main/templates/home/home.html
@@ -123,10 +123,10 @@
   </div>
 
     <div id="footer">
-        Vyvíjeno na <a href="http://www.fi.muni.cz/">FI MU</a>, všechny připomínky velmi vítány:
-        <span class="email contact">slepemapy{zavinac}googlegroups.com</span>
-        <a class="contact" href="https://plus.google.com/+SlepemapyCz/">Google+</a>
-        <a class="contact" href="https://www.facebook.com/slepemapy">Facebook</a>
+      <a href="#/about">O projektu</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; Kontakty:  
+      <span class="email contact">slepemapy{zavinac}googlegroups.com</span>
+      <a class="contact" href="https://plus.google.com/+SlepemapyCz/">Google+</a>
+      <a class="contact" href="https://www.facebook.com/slepemapy">Facebook</a>
     </div>
     <!-- Le javascript
     ================================================== -->
