Remove underscores from urls fro SEO. #42

--- a/main/templates/home/home.html
+++ b/main/templates/home/home.html
@@ -73,8 +73,8 @@
                     {% endfor %}
                   </ul>
                 </li>
-                <li ng-class="'/how_it_works'|isActive">
-                  <a href="#/how_it_works">Jak to funguje?</a>
+                <li ng-class="'/how-it-works'|isActive">
+                  <a href="#/how-it-works">Jak to funguje?</a>
                 </li>
         </ul>
           ...
