--- a/main/templates/home/home.html
+++ b/main/templates/home/home.html
@@ -23,7 +23,7 @@
     <meta name="description" content="Inteligentní aplikace na procvičování
     států a měst na slepé mapě světa, Evropy, Asie, Afriky, Ameriky, ČR, usa
     a dalších států">
-    <meta name="keywords" content="slepé mapy, zeměpis, státy, procvičování, svět, amerika, afrika, asie, usa" />
+    <meta name="keywords" content="slepé mapy, zeměpis, státy, města, svět, evrovpa, amerika, afrika, asie, usa, čr, hry" />
 
     <link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
 
