--- a/main/templates/home/welcome_page.html
+++ b/main/templates/home/welcome_page.html
@@ -22,8 +22,8 @@
           <a href="#/practice/" class="btn btn-primary btn-lg btn-huge" >Začít procvičovat svět</a>
         </div>
         <div class="flatblock-content">Kromě slepé mapy světa můžete procvičovat
-          mapy jednotlivých kontinentů (Afrika, Severní a Jižní Amerika, Asie,&nbsp;...)
-          a vybraných států (USA, ČR, Německo,&nbsp;...)
+          mapy jednotlivých kontinentů (Evropa, Afrika, Severní a Jižní Amerika, 
+          Asie, Austrálie) a vybraných států (USA, ČR, Německo,&nbsp;...)
         </div>
       </div>
   </div>
