--- a/main/templates/home/how_it_works.html
+++ b/main/templates/home/how_it_works.html
@@ -5,13 +5,13 @@
 <div class="works-div">
 <h3><i class="glyphicon glyphicon-tower"></i> Zeměpis hrou</h3>
 Procvičte si své znalosti zeměpisu hravou formou. V aktuální verzi zatím soutěžíte jen sami se sebou, respektive proti systému.
-Dokážete obarvit celou mapu na zeleno?
+Dokážete obarvit na zeleno celou mapu Evropy? Celou ČR? A celý svět?
 </div>
 
 <div class="works-div">
 <h3><i class="glyphicon glyphicon-dashboard"></i> Adaptabilní procvičování</h3>
-Systém vás zkouší ze znalosti států, přičemž chování systému je adaptabilní - podle toho, jaké máte znalosti, systém volí podobu otázek (otevřená, výběr z možností) a frekvenci opakování.
-Systém vám tak předkládá státy, jejichž procvičení je pro vás nejužitečnější.
+Systém vás zkouší ze znalosti států, přičemž chování systému je adaptabilní - podle toho, jaké máte znalosti, aplikace volí podobu otázek (otevřená, výběr z možností) a frekvenci opakování.
+Aplikace vám tak předkládá státy, jejichž procvičení je pro vás nejužitečnější.
 </div>
 
 <div class="works-div">
@@ -26,7 +26,7 @@ Procvičování slepých map nabízí i řada jiných výukových systémů, ty 
 
 <div class="works-div">
 <h3><i class="glyphicon glyphicon-stats"></i> Učení z dat</h3>
-Systém se učí z dat od všech uživatelů. Výběr otázek je založen na těchto datech, nikoliv na znalostech experta na zeměpis, který "ví", jestli je těžší poznat Keňu nebo Nigérii.
+Aplikace se učí z dat od všech uživatelů. Výběr otázek je založen na těchto datech, nikoliv na znalostech experta na zeměpis, který "ví", jestli je těžší poznat Keňu nebo Nigérii.
 </div>
 </div>
 <div class="clearfix"></div>
