--- a/main/templates/home/how_it_works.html
+++ b/main/templates/home/how_it_works.html
@@ -5,18 +5,18 @@
 <div class="works-div">
 <h3><i class="glyphicon glyphicon-tower"></i> Zeměpis hrou</h3>
 Procvičte si své znalosti zeměpisu hravou formou. V aktuální verzi zatím soutěžíte jen sami se sebou, respektive proti systému.
-Dokážete obarvit na zeleno celou mapu Evropy? Celou ČR? A celý svět?
+Dokážete obarvit na zeleno celou mapu Evropy? Celou ČR? A co celý svět?
 </div>
 
 <div class="works-div">
 <h3><i class="glyphicon glyphicon-dashboard"></i> Adaptabilní procvičování</h3>
-Systém vás zkouší ze znalosti států, přičemž chování systému je adaptabilní - podle toho, jaké máte znalosti, aplikace volí podobu otázek (otevřená, výběr z možností) a frekvenci opakování.
+Systém vás zkouší ze znalosti slepých map, přičemž chování systému je adaptabilní - podle toho, jaké máte vědomosti, aplikace volí podobu otázek (otevřená, výběr z možností) a frekvenci opakování.
 Aplikace vám tak předkládá státy, jejichž procvičení je pro vás nejužitečnější.
 </div>
 
 <div class="works-div">
 <h3><i class="glyphicon glyphicon-picture"></i> Vizualizace znalostí</h3>
-Na základě odpovědí systém odhadne vaše znalosti jednotlivých států a znázorní vám mapu vašich znalostí, což vám pomůže ujasnit si, co vlastně umíte.
+Na základě odpovědí systém odhadne jak dobře znáte různé státy a znázorní vám mapu vašich znalostí, což vám pomůže ujasnit si, co vlastně umíte.
 </div>
 
 <div class="works-div">
