Add social network buttons. #42

--- a/main/geography/static/sass/_welcome-page.sass
+++ b/main/geography/static/sass/_welcome-page.sass
@@ -52,6 +52,14 @@ h1, h2, h3
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak
   display: none
 
+.plugins-social
+  text-align: center
+  margin-top: 20px
+
+#___plusone_0 iframe
+  position: relative !important
+  top: 6px !important
+
 @media (min-width: 767px)
   $huge-radius: 9px
   .btn-huge
