--- a/main/templates/home/welcome_page.html
+++ b/main/templates/home/welcome_page.html
@@ -25,6 +25,10 @@
           mapy jednotlivých kontinentů (Evropa, Afrika, Severní a Jižní Amerika, 
           Asie, Austrálie) a vybraných států (USA, ČR, Německo,&nbsp;...)
         </div>
+        <div class="plugins-social">
+          <div class="g-plusone" data-size="medium"></div>
+          <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+        </div>
       </div>
   </div>
         {% include "home/how_it_works.html" %}
