--- a/main/templates/home/above-fold-bootstrap.css
+++ b/main/templates/home/above-fold-bootstrap.css
@@ -7,12 +7,6 @@ body { margin: 0px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 .navbar { position: relative; z-index: 1000; min-height: 50px; margin-bottom: 0px; border: 1px solid transparent; border-top-left-radius: 0px; border-top-right-radius: 0px; border-bottom-right-radius: 0px; border-bottom-left-radius: 0px; }
 .navbar-inverse { background-color: rgb(34, 34, 34); border-color: rgb(8, 8, 8); }
 .container { margin-right: auto; margin-left: auto; padding-left: 15px; padding-right: 15px; max-width: 1170px; }
-button, input, select, textarea { font-family: inherit; font-size: 100%; margin: 0px; }
-button, input { line-height: normal; }
-button, select { text-transform: none; }
-button, html input[type="button"], input[type="reset"], input[type="submit"] { -webkit-appearance: button; cursor: pointer; }
-input, button, select, textarea { font-family: inherit; font-size: inherit; line-height: inherit; }
-button, input, select[multiple], textarea { background-image: none; }
 .navbar-toggle { position: relative; float: right; margin-right: 15px; padding: 9px 10px; margin-top: 8px; margin-bottom: 8px; background-color: transparent; border: 1px solid transparent; border-top-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; display: none; }
 .navbar-inverse .navbar-toggle { border-color: rgb(51, 51, 51); }
 .navbar-toggle .icon-bar { display: block; width: 22px; height: 2px; border-top-left-radius: 1px; border-top-right-radius: 1px; border-bottom-right-radius: 1px; border-bottom-left-radius: 1px; }
@@ -77,8 +71,6 @@ h1, .h1 { font-size: 36px; }
 .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11 { float: left; }
 .col-lg-6 { width: 50%; }
 .col-lg-offset-3 { margin-left: 25%; }
-h2, .h2 { font-size: 30px; }
-h3, .h3 { font-size: 24px; }
 }
 @media (min-width: 768px) and (max-width: 991px) {
 *, ::before, ::after { box-sizing: border-box; }
@@ -87,12 +79,6 @@ body { margin: 0px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 .navbar { position: relative; z-index: 1000; min-height: 50px; margin-bottom: 20px; border: 1px solid transparent; border-top-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; }
 .navbar-inverse { background-color: rgb(34, 34, 34); border-color: rgb(8, 8, 8); }
 .container { margin-right: auto; margin-left: auto; padding-left: 15px; padding-right: 15px; max-width: 750px; }
-button, input, select, textarea { font-family: inherit; font-size: 100%; margin: 0px; }
-button, input { line-height: normal; }
-button, select { text-transform: none; }
-button, html input[type="button"], input[type="reset"], input[type="submit"] { -webkit-appearance: button; cursor: pointer; }
-input, button, select, textarea { font-family: inherit; font-size: inherit; line-height: inherit; }
-button, input, select[multiple], textarea { background-image: none; }
 .navbar-toggle { position: relative; float: right; margin-right: 15px; padding: 9px 10px; margin-top: 8px; margin-bottom: 8px; background-color: transparent; border: 1px solid transparent; border-top-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; display: none; }
 .navbar-inverse .navbar-toggle { border-color: rgb(51, 51, 51); }
 .navbar-toggle .icon-bar { display: block; width: 22px; height: 2px; border-top-left-radius: 1px; border-top-right-radius: 1px; border-bottom-right-radius: 1px; border-bottom-left-radius: 1px; }
@@ -141,8 +127,6 @@ h1, h2, h3 { margin-top: 20px; margin-bottom: 10px; }
 h1, .h1 { font-size: 36px; }
 .jumbotron h1 { line-height: 1; color: inherit; font-size: 63px; }
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 { position: relative; min-height: 1px; padding-left: 15px; padding-right: 15px; }
-h2, .h2 { font-size: 30px; }
-h3, .h3 { font-size: 24px; }
 }
 @media (max-width: 767px) {
 *, ::before, ::after { box-sizing: border-box; }
@@ -153,12 +137,6 @@ body { margin: 0px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 .navbar { position: relative; z-index: 1000; min-height: 50px; margin-bottom: 0px; border: 1px solid transparent; border-top-left-radius: 0px; border-top-right-radius: 0px; border-bottom-right-radius: 0px; border-bottom-left-radius: 0px; }
 .navbar-inverse { background-color: rgb(34, 34, 34); border-color: rgb(8, 8, 8); }
 .container { margin-right: auto; margin-left: auto; padding-left: 15px; padding-right: 15px; }
-button, input, select, textarea { font-family: inherit; font-size: 100%; margin: 0px; }
-button, input { line-height: normal; }
-button, select { text-transform: none; }
-button, html input[type="button"], input[type="reset"], input[type="submit"] { -webkit-appearance: button; cursor: pointer; }
-input, button, select, textarea { font-family: inherit; font-size: inherit; line-height: inherit; }
-button, input, select[multiple], textarea { background-image: none; }
 .navbar-toggle { position: relative; float: right; margin-right: 15px; padding: 9px 10px; margin-top: 8px; margin-bottom: 8px; background-color: transparent; border: 1px solid transparent; border-top-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; }
 .navbar-inverse .navbar-toggle { border-color: rgb(51, 51, 51); }
 .navbar-toggle .icon-bar { display: block; width: 22px; height: 2px; border-top-left-radius: 1px; border-top-right-radius: 1px; border-bottom-right-radius: 1px; border-bottom-left-radius: 1px; }
@@ -213,6 +191,14 @@ h1, h2, h3 { margin-top: 20px; margin-bottom: 10px; font-weight: bold; }
 h1, .h1 { font-size: 36px; }
 .jumbotron h1 { line-height: 1; color: inherit; }
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 { position: relative; min-height: 1px; padding-left: 15px; padding-right: 15px; }
+}
+button, input, select, textarea { font-family: inherit; font-size: 100%; margin: 0px; }
+button, input { line-height: normal; }
+button, select { text-transform: none; }
+button, html input[type="button"], input[type="reset"], input[type="submit"] { -webkit-appearance: button; cursor: pointer; }
+input, button, select, textarea { font-family: inherit; font-size: inherit; line-height: inherit; }
+button, input, select[multiple], textarea { background-image: none; }
+.clearfix {clear:both}
 h2, .h2 { font-size: 30px; }
 h3, .h3 { font-size: 24px; }
-}
+
