--- a/main/geography/static/sass/_welcome-page.sass
+++ b/main/geography/static/sass/_welcome-page.sass
@@ -15,11 +15,11 @@
   .block-welcome_page
     font-size: 1.25em
     line-height: 120%
+    padding: 0
     .flatblock-content
-      text-align: justify
-  .btn-centerer
-    text-align: center
-    margin: 30px auto 30px auto
+      text-align: center
+      padding-bottom: 10px
+      padding-top: 10px
 
 
 .how-it-works
@@ -56,18 +56,35 @@ h1, h2, h3
   text-align: center
   margin-top: 20px
 
+.btn-huge
+  margin: 5px
+  text-shadow: none
+  width: 100%
+
 #___plusone_0 iframe
   position: relative !important
   top: 6px !important
 
+@media (min-width: 467px)
+  .btn-huge
+    width: 46%
+    margin: 1.5%
+
 @media (min-width: 767px)
   $huge-radius: 9px
   .btn-huge
-    padding: 21px 29px
+    margin: 1.3%
+    width: 30%
+    padding: 21px 0px
     font-size: 27.5px
     -webkit-border-radius: $huge-radius
     -moz-border-radius: $huge-radius
     border-radius: $huge-radius
+    
+@media (min-width: 1170px)
+  .btn-huge
+    margin: 1%
+
 
 @media (max-width: 767px)
   .welcome-page
