--- a/main/templates/home/welcome_page.html
+++ b/main/templates/home/welcome_page.html
@@ -15,15 +15,15 @@
   <div class="welcome-page jumbotron">
       <h1 >Slepé Mapy</h1>
       <div class="flatblock block-welcome_page col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
-        <div class="flatblock-content">je aplikace na procvičování znalosti slepých map.
-          Aplikace přizpůsobuje obtížnost otázek vašim znalostem.
+        <div class="flatblock-content">Co byste chtěli procvičovat?
         </div>
-        <div class="btn-centerer">
-          <a href="#/practice/" class="btn btn-primary btn-lg btn-huge" >Začít procvičovat svět</a>
-        </div>
-        <div class="flatblock-content">Kromě slepé mapy světa můžete procvičovat
-          mapy jednotlivých kontinentů (Evropa, Afrika, Severní a Jižní Amerika, 
-          Asie, Austrálie) a vybraných států (USA, ČR, Německo,&nbsp;...)
+          <a href="#/practice/" class="btn btn-primary btn-lg btn-huge" >Státy světa</a>
+          <a href="#/practice/" class="btn btn-default btn-lg btn-huge" >Státy Evropy</a>
+          <a href="#/practice/" class="btn btn-default btn-lg btn-huge" >Státy USA</a>
+          <a href="#/practice/" class="btn btn-default btn-lg btn-huge" >Kraje ČR</a>
+          <a href="#/practice/" class="btn btn-default btn-lg btn-huge" >Města ČR</a>
+          <a href="#/practice/" class="btn btn-default btn-lg btn-huge" >Pohoří Evropy</a>
+        <div class="flatblock-content">... nebo něco jiného? Viz menu nahoře.
         </div>
         <div class="plugins-social">
           <div class="g-plusone" data-size="medium"></div>
