Add map of Slovakia. #62

--- a/main/templates/home/about.html
+++ b/main/templates/home/about.html
@@ -43,7 +43,7 @@
       <li><a href="http://www.gadm.org/">Global Administrative Areas</a> -
        administrativní členění Itálie, Francie a Španělska </li>
       <li><a href="http://download.geofabrik.de/">OpenStreetMap Data Extracts</a> -
-      města České republiky</li>
+      města České republiky a Slovenska</li>
     </ul>
 
     <ul>
