Fix targets of buttons on the front page.

--- a/main/templates/home/welcome_page.html
+++ b/main/templates/home/welcome_page.html
@@ -17,12 +17,12 @@
       <div class="flatblock block-welcome_page col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
         <div class="flatblock-content">Co byste chtěli procvičovat?
         </div>
-          <a href="#/practice/" class="btn btn-primary btn-lg btn-huge" >Státy světa</a>
-          <a href="#/practice/" class="btn btn-default btn-lg btn-huge" >Státy Evropy</a>
-          <a href="#/practice/" class="btn btn-default btn-lg btn-huge" >Státy USA</a>
-          <a href="#/practice/" class="btn btn-default btn-lg btn-huge" >Kraje ČR</a>
-          <a href="#/practice/" class="btn btn-default btn-lg btn-huge" >Města ČR</a>
-          <a href="#/practice/" class="btn btn-default btn-lg btn-huge" >Pohoří Evropy</a>
+          <a href="#/practice/world/state" class="btn btn-primary btn-lg btn-huge" >Státy světa</a>
+          <a href="#/practice/europe/state" class="btn btn-default btn-lg btn-huge" >Státy Evropy</a>
+          <a href="#/practice/us/state" class="btn btn-default btn-lg btn-huge" >Státy USA</a>
+          <a href="#/practice/cz/region_cz" class="btn btn-default btn-lg btn-huge" >Kraje ČR</a>
+          <a href="#/practice/cz/city" class="btn btn-default btn-lg btn-huge" >Města ČR</a>
+          <a href="#/practice/europe/mountains" class="btn btn-default btn-lg btn-huge" >Pohoří Evropy</a>
         <div class="flatblock-content">... nebo něco jiného? Viz menu nahoře.
         </div>
         <div class="plugins-social">
