--- a/main/templates/home/welcome_page.html
+++ b/main/templates/home/welcome_page.html
@@ -27,7 +27,7 @@
         </div>
         <div class="plugins-social">
           <div class="g-plusone" data-size="medium"></div>
-          <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+          <div class="fb-like" data-href="https://www.facebook.com/slepemapy" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
         </div>
       </div>
   </div>
