Add alexa.com verify id

--- a/main/templates/home/home.html
+++ b/main/templates/home/home.html
@@ -21,9 +21,10 @@
 	{% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Inteligentní aplikace na procvičování
-    států a měst na slepé mapě světa, Evropy, Asie, Afriky, Ameriky, ČR, usa
+    států a měst na slepé mapě světa, Evropy, Asie, Afriky, Ameriky, ČR, USA 
     a dalších států">
     <meta name="keywords" content="slepé mapy, zeměpis, státy, města, svět, evrovpa, amerika, afrika, asie, usa, čr, hry" />
+    <meta name="alexaVerifyID" content="XtHK6F0Y_UJon13Y6VwE4_zB4Ys" />
 
     <link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
 
