Footer link to slepaanatomie.cz

--- a/main/templates/home/home.html
+++ b/main/templates/home/home.html
@@ -128,6 +128,8 @@
       <span class="email contact">slepemapy{zavinac}googlegroups.com</span>
       <a class="contact" href="https://plus.google.com/+SlepemapyCz/">Google+</a>
       <a class="contact" href="https://www.facebook.com/slepemapy">Facebook</a>
+      &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+      Vyzkoušejte také <a href="http://slepaanatomie.cz" target="_blank">Slepou Anatomii</a>
     </div>
     <!-- Le javascript
     ================================================== -->
