Overview of all maps. #64

--- a/main/geography/static/sass/_global.sass
+++ b/main/geography/static/sass/_global.sass
@@ -98,3 +98,34 @@ html, body
 .old-browser
   margin: 0
   text-align: center
+
+.inline
+  display: inline
+
+.overview
+  background: rgba(0,0,0,0.05)
+  padding-bottom: 30px
+  .btn
+    margin: 5px
+  h2
+    padding: 20px
+  h1
+    margin: 0
+    padding: 20px
+    text-align: center
+  h3
+    display: inline
+    margin-top: 10px
+    margin-bottom: 0
+
+.overview-row
+  padding: 10px 0 10px 0
+
+.overview-row:nth-child(even)
+  background: rgba(0,0,0,0.05)
+
+.map-categories
+  padding: 20px 0 0px 0
+
+.map-categories:nth-child(odd)
+  background: rgba(0,0,0,0.05)
