--- a/main/templates/home/home.html
+++ b/main/templates/home/home.html
@@ -124,7 +124,9 @@
   </div>
 
     <div id="footer">
-      <a href="#/about">O projektu</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; Kontakty:  
+      <a href="#/about">O projektu</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+      <a href="#/overview/">Přehled map</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; 
+      Kontakty:  
       <span class="email contact">slepemapy{zavinac}googlegroups.com</span>
       <a class="contact" href="https://plus.google.com/+SlepemapyCz/">Google+</a>
       <a class="contact" href="https://www.facebook.com/slepemapy">Facebook</a>
