--- a/main/templates/home/welcome_page.html
+++ b/main/templates/home/welcome_page.html
@@ -23,7 +23,8 @@
           <a href="#/practice/cz/region_cz" class="btn btn-default btn-lg btn-huge" >Kraje ČR</a>
           <a href="#/practice/cz/city" class="btn btn-default btn-lg btn-huge" >Města ČR</a>
           <a href="#/practice/europe/mountains" class="btn btn-default btn-lg btn-huge" >Pohoří Evropy</a>
-        <div class="flatblock-content">... nebo něco jiného? Viz menu nahoře.
+        <div class="flatblock-content">
+          <a href="#/overview/">... nebo něco jiného?</a>
         </div>
         <div class="plugins-social">
           <div class="g-plusone" data-size="medium"></div>
