Compile angular templates on deploy.

--- a/main/templates/home/home.html
+++ b/main/templates/home/home.html
@@ -120,6 +120,7 @@
     ================================================== -->
     <div data-ng-view id="ng-view" ng-class="vip() && 'vip'">
         {% include "home/welcome_page.html" %}
+        {% include "home/how_it_works.html" %}
     </div>
   </div>
 
