--- a/main/geography/static/sass/_responsive.sass
+++ b/main/geography/static/sass/_responsive.sass
@@ -2,7 +2,6 @@
   .version
     display: none
   .map-container
-    padding-top: 30px
     height: auto
     h1
       margin-top: 5px
@@ -30,5 +29,10 @@
       .label
         font-size: 11.844px
         line-height: 14px
+  .zoom-buttons
+    display: none
+  .summary
+    .progress
+      margin-top: 20px
   .quesions-progress
     margin-bottom: 0
