Main menu: replace "how it works" with "maps overview"

--- a/main/templates/home/home.html
+++ b/main/templates/home/home.html
@@ -74,8 +74,8 @@
                     {% endfor %}
                   </ul>
                 </li>
-                <li ng-class="'/how-it-works'|isActive">
-                  <a href="#/how-it-works">Jak to funguje?</a>
+                <li ng-class="'/overview/'|isActive">
+                  <a href="#/overview/">Přehled map</a> 
                 </li>
         </ul>
           ...
@@ -126,7 +126,6 @@
 
     <div id="footer">
       <a href="#/about">O projektu</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-      <a href="#/overview/">Přehled map</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; 
       Kontakty:  
       <span class="email contact">slepemapy{zavinac}googlegroups.com</span>
       <a class="contact" href="https://plus.google.com/+SlepemapyCz/">Google+</a>
