--- a/main/geography/static/sass/_global.sass
+++ b/main/geography/static/sass/_global.sass
@@ -102,11 +102,28 @@ html, body
 .inline
   display: inline
 
+.inline-block
+  display: inline-block
+
+.overview-progress
+  height: 10px
+
+.skill-tooltip
+  padding: 5px
+
 .overview
   background: rgba(0,0,0,0.05)
   padding-bottom: 30px
-  .btn
+  .inline-block
     margin: 5px
+    .btn
+      min-width: 100px
+      border-bottom-left-radius: 0
+      border-bottom-right-radius: 0
+    .progress, .progress-bar
+      border-top-left-radius: 0
+      border-top-right-radius: 0
+      margin-bottom: 0
   h2
     padding: 20px
   h1
