Add progress bars to knowledge maps.

--- a/main/geography/static/sass/_preview-map.sass
+++ b/main/geography/static/sass/_preview-map.sass
@@ -1,4 +1,9 @@
 .thumbnails
+  .progress
+    margin: 0 -15px 0 -15px
+    border-radius: 0
+    height: 5px
+    background: none
   overflow: hidden
   li
     background: #eee
