Maps overview: add statistics to whole maps

--- a/main/geography/static/sass/app.sass
+++ b/main/geography/static/sass/app.sass
@@ -4,6 +4,7 @@
 @import "bootstrap-fixes"
 @import "global"
 
+@import "overview"
 @import "welcome-page"
 @import "map-container"
 @import "preview-map"
