--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -21,11 +21,9 @@
 	{% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Inteligentní aplikace na procvičování
-    států a měst na slepé mapě světa, Evropy, Asie, Afriky, Ameriky, ČR, USA 
+    států, měst, pohoří a řek na slepé mapě světa, Evropy, Asie, Afriky, Ameriky, ČR, USA 
     a dalších států">
-    <meta name="keywords" content="slepé mapy, zeměpis, státy, města, svět, evrovpa, amerika, afrika, asie, usa, čr, hry" />
-    <meta name="alexaVerifyID" content="XtHK6F0Y_UJon13Y6VwE4_zB4Ys" />
-
+    <meta name="keywords" content="slepé mapy, státy, města, čr, svět, evrovpa, amerika, afrika, asie, pohoří, řeky, zeměpis, usa, hry" />
     <link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
 
     <!-- Le styles -->
