Change knowledge progress bars to show learned and practised places.

--- a/main/geography/static/sass/_global.sass
+++ b/main/geography/static/sass/_global.sass
@@ -1,5 +1,5 @@
-$gray-top: #fff
-$gray-bottom: #eee
+$learned: #0d0
+$practiced: #ff0
 
 body
   overflow-y: scroll
@@ -101,3 +101,15 @@ html, body
 
 .inline
   display: inline
+
+.progress-bar-learned
+  background-color: $learned
+
+.progress-bar-practiced
+  background-color: $practiced
+
+.color-indicator.learned
+  background-color: $learned
+
+.color-indicator.practiced
+  background-color: $practiced
