--- a/main/geography/static/sass/_map-container.sass
+++ b/main/geography/static/sass/_map-container.sass
@@ -61,7 +61,7 @@ $map-height:500px
   height: 18px
   margin: -2px 5px -5px -6px
   border: 0
-  border-radius: 10px
+  border-radius: 50%
 
 .qtip-titlebar
   .label
