Level progress bar. #79

--- a/main/geography/static/sass/_overview.sass
+++ b/main/geography/static/sass/_overview.sass
@@ -8,6 +8,10 @@
 .skill-tooltip
   padding: 5px
 
+.overview-stats
+  padding-bottom: 30px
+  text-align: center
+
 .overview
   background: rgba(0,0,0,0.05)
   padding-bottom: 30px
@@ -42,3 +46,25 @@
 
 .map-categories:nth-child(odd)
   background: rgba(0,0,0,0.05)
+
+.level-progress
+  width: 250px
+  display: inline-block
+  margin: 0px -4px -5px -4px
+  border-radius: 0
+  background-color: #ddd
+  .progress-bar
+    background-color: #0dde00
+
+.level-start
+  background-color: #0dde00
+
+.level-goal
+  background-color: #ddd
+  color: rgba(0,0,0,0.4)
+
+.level-start, .level-goal
+  font-size: 17px
+  line-height: 150%
+  border-radius: 50%
+  width: 32px
