First piece of English l10n. #92

--- a/main/geography/static/sass/_flags.sass
+++ b/main/geography/static/sass/_flags.sass
@@ -211,7 +211,7 @@
   background-position: -48px -33px
   width: 16px
 
-.flag-cz
+.flag-cz, .flag-cs
   background-position: -64px -33px
   width: 16px
 
@@ -303,7 +303,7 @@
   background-position: -160px -44px
   width: 16px
 
-.flag-gb
+.flag-gb, .flag-en
   background-position: -176px -44px
   width: 16px
 
