Welcome page: fix long button labels issue

--- a/main/geography/static/sass/_welcome-page.sass
+++ b/main/geography/static/sass/_welcome-page.sass
@@ -80,6 +80,7 @@ h1, h2, h3
     -webkit-border-radius: $huge-radius
     -moz-border-radius: $huge-radius
     border-radius: $huge-radius
+    white-space: normal
     
 @media (min-width: 1170px)
   .btn-huge
