--- a/main/geography/static/sass/_welcome-page.sass
+++ b/main/geography/static/sass/_welcome-page.sass
@@ -61,6 +61,7 @@ h1, h2, h3
   text-shadow: none
   width: 100%
 
+
 #___plusone_0 iframe
   position: relative !important
   top: 6px !important
@@ -81,6 +82,9 @@ h1, h2, h3
     -moz-border-radius: $huge-radius
     border-radius: $huge-radius
     white-space: normal
+  .navbar
+    .container
+      max-width: 1170px
     
 @media (min-width: 1170px)
   .btn-huge
