Feedback form created

--- a/main/geography/static/sass/_global.sass
+++ b/main/geography/static/sass/_global.sass
@@ -85,9 +85,6 @@ html, body
   min-height: 30px
   a
     color: rgb(82, 186, 255) 
-  .contact
-    margin: 0 5px 0 5px
-
 
 #ng-view
   position: relative
@@ -113,3 +110,6 @@ html, body
 
 .color-indicator.practiced
   background-color: $practiced
+
+.modal-backdrop.fade.in
+  background: rgba(0, 0, 0, 0.8)
