--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -81,7 +81,7 @@
         </ul>
           ...
             <ul class="nav ng-cloak navbar-nav pull-right"
-                ng-init="initUser('{{user.username}}',{{user.points}})">
+                ng-init="initUser('{{user.username}}',{{user.points}}, '{{user.email}}')">
                 <li class="dropdown" ng-show="user.username === ''" >
                   <a href="" 
                      role="button" 
@@ -152,16 +152,50 @@
 
     <div id="footer">
       {% if LANGUAGE_CODE == "cs" %}
-      <a href="#/about">{% trans "O projektu" %}</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+      <a href="#/about">{% trans "O projektu" %}</a> 
+      &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
       {% endif %}
-      {% trans "Kontakty" %}:  
-      <span class="email contact">slepemapy{zavinac}googlegroups.com</span>
-      <a class="contact" href="https://plus.google.com/+SlepemapyCz/">Google+</a>
-      <a class="contact" href="https://www.facebook.com/slepemapy">Facebook</a>
-      {% if LANGUAGE_CODE == "cs" %}
+      <a href="" ng-click="openFeedback()">
+        {% trans "Napište nám"%}
+      </a>
+      &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+      <a href="https://plus.google.com/+SlepemapyCz/">Google+</a>
+      &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+      <a href="https://www.facebook.com/slepemapy">Facebook</a>
+   {% if LANGUAGE_CODE == "cs" %}
       &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
       Vyzkoušejte také <a href="http://slepaanatomie.cz" target="_blank">Slepou Anatomii</a>
-      {% endif %}
+    {% endif %}
+
+    <script type="text/ng-template" id="myModalContent.html">
+        <div class="modal-header">
+            <h3 class="modal-title">{% trans "Napište nám"%}</h3>
+        </div>
+        <div class="modal-body">
+            <label>
+              {% trans "Feedback text label"%}
+            </label>
+            <textarea ng-model="feedback.text" class="btn-block" rows="8" ></textarea>
+            <label>
+              {% trans "Vaše emailová adresa (nepovinné)"%}
+            </label>
+            <input type="text" ng-model="feedback.email" class="btn-block"/>
+            <br>
+            {%verbatim%}
+            <alert ng-repeat="alert in alerts" type="{{alert.type}}"
+            close="closeAlert($index)">{{alert.msg}}</alert>
+            {%endverbatim%}
+        </div>
+        <div class="modal-footer">
+            <button ng-disabled="sending" class="btn btn-primary" ng-click="send()">
+              {% trans "Odeslat"%}
+            </button>
+            <button class="btn btn-danger" ng-click="cancel()">
+              {% trans "Zavřít"%}
+            </button>
+        </div>
+    </script>
+
     </div>
     <!-- Le javascript
     ================================================== -->
